Fix spacing in Carousel

--- a/src/components/grid-aware/BlockQuoteBlock/BlockQuoteBlock.module.css
+++ b/src/components/grid-aware/BlockQuoteBlock/BlockQuoteBlock.module.css
@@ -41,6 +41,7 @@
 }
 
 .dots {
+  height: 20px;
   margin-top: 19px;
   text-align: center;
 }
